fix: Keyboard layout shortcuts activate wrong language

BUG: 444569